version 0.99.3 - XX-May-2010
 . [NEW] Animation: added 2 methods to create the Animation without delay (updated samples)
 . [FIX] ActionManager: Improved API, with better names (issue #835)
 . [FIX] Action CCCallFunc: supports class methods (issue #868)
 . [FIX] Particle: Kill the particle if timeToLive < 0 before updating it.

version 0.99.3-rc - 18-May-2010
 . [NEW] License: Using MIT license
 . [NEW] Node: added removeFromParentAndCleanup:(BOOL) (issue #566)
 . [NEW] Particle: Added support for modes: "gravity mode" (old behavior) and "radial movement" mode
 . [NEW] Particle: Added support Particle Designer (issue #XXX)
 . [NEW] Scheduler: supports pause/resume/'update' with priority (issue #439)
 . [FIX] ActionManager: using uthash instead of ccHashSet (easier to use)
 . [FIX] Actions: CallFuncND can pass any void ptr, even 0 or 1.
 . [FIX] BitmapFontAtlas: using uthash instead of ccHashSet (easier to use)
 . [FIX] Grid: Fixed memory leak (issue #853)
 . [FIX] Menu: If items are disabled or invisible, touch is not consumed (issues #779, #866)
 . [FIX] Particles: Removed unnecesary assert (issue #851)
 . [FIX] Particles: QuadParticle works with NPOT textures (issue #863)
 . [FIX] Scheduler: Improved performance (issue #492)
 . [FIX] Templates: Using uthash instead of ccHashSet (issue #860)
 . [FIX] Templates: templates can be installed in user directory (issue #856)
 
version 0.99.2 - 28-Apr-2010
 . [FIX] ActionManager: removeByTag doesn't crash if action is also running (issue #841)
 . [FIX] cocos2d/*.m: fixed several memory leaks in cases where initXXX failed (issue #XXX)
 . [FIX] Director: fixed start-up flicker (issue #350)
 . [FIX] EAGLView: If discard-framebuffer is supported and using depthBuffer, then discard it before swapping (SDK4.0 only) (issue #XXX)
 . [FIX] Grid: simplied code, easier to maintain, added support for flipped textures (part of issue #448)
 . [FIX] Sprite/SpriteSheet: reorderChild works as expected when using subchildren (issue #767)