@@ -85,6 +85,7 @@ typedef struct _KerningHashElement
 -(void) parseCharacterDefinition:(NSString*)line charDef:(ccBitmapFontDef*)characterDefinition;
 -(void) parseInfoArguments:(NSString*)line;
 -(void) parseCommonArguments:(NSString*)line;
+-(void) parseImageFileName:(NSString*)line fntFile:(NSString*)fntFile;
 -(void) parseKerningCapacity:(NSString*)line;
 -(void) parseKerningEntry:(NSString*)line;
 -(void) purgeKerningDictionary;
@@ -112,8 +113,15 @@ typedef struct _KerningHashElement
 {
 	CCLOGINFO( @"cocos2d: deallocing %@", self);
 	[self purgeKerningDictionary];
+	[atlasName release];
 	[super dealloc];
 }
+
+- (NSString*) description
+{
+	return [NSString stringWithFormat:@"<%@ = %08X | Kernings:%d | Image = %@>", [self class], self, HASH_COUNT(kerningDictionary), atlasName];
+}
+
 
 -(void) purgeKerningDictionary
 {
@@ -153,6 +161,9 @@ typedef struct _KerningHashElement
 		else if([line hasPrefix:@"common lineHeight"]) {
 			[self parseCommonArguments:line];
 		}
+		else if([line hasPrefix:@"page id"]) {
+			[self parseImageFileName:line fntFile:fntFile];
+		}
 		else if([line hasPrefix:@"chars c"]) {
 			// Ignore this line
 		}
@@ -173,6 +184,36 @@ typedef struct _KerningHashElement
 	}
 	// Finished with lines so release it
 	[lines release];	
+}
+
+-(void) parseImageFileName:(NSString*)line fntFile:(NSString*)fntFile
+{
+	NSString *propertyValue = nil;
+
+	// Break the values for this line up using =
+	NSArray *values = [line componentsSeparatedByString:@"="];
+	
+	// Get the enumerator for the array of components which has been created
+	NSEnumerator *nse = [values objectEnumerator];
+	
+	// We need to move past the first entry in the array before we start assigning values
+	[nse nextObject];
+	
+	// page ID. Sanity check
+	propertyValue = [nse nextObject];
+	NSAssert( [propertyValue intValue] == 0, @"XXX: BitmapFontAtlas only supports 1 page");
+	
+	// file 
+	propertyValue = [nse nextObject];
+	NSArray *array = [propertyValue componentsSeparatedByString:@"\""];
+	propertyValue = [array objectAtIndex:1];
+	NSAssert(propertyValue,@"BitmapFontAtlas file could not be found");
+	
+	NSString *textureAtlasName = [CCFileUtils fullPathFromRelativePath:propertyValue];
+	NSString *relDirPathOfTextureAtlas = [fntFile stringByDeletingLastPathComponent];
+	
+	atlasName = [relDirPathOfTextureAtlas stringByAppendingPathComponent:textureAtlasName];	
+	[atlasName retain];
 }
 
 -(void) parseInfoArguments:(NSString*)line
@@ -294,7 +335,7 @@ typedef struct _KerningHashElement
 	propertyValue = [nse nextObject];
 	propertyValue = [propertyValue substringToIndex: [propertyValue rangeOfString: @" "].location];
 	characterDefinition->charID = [propertyValue intValue];
-	NSAssert(characterDefinition->charID < kBitmapFontAtlasMaxChars, @"BitmpaFontAtlas: CharID bigger than supported");
+	NSAssert(characterDefinition->charID < kCCBitmapFontAtlasMaxChars, @"BitmpaFontAtlas: CharID bigger than supported");
 
 	// Character x
 	propertyValue = [nse nextObject];
@@ -384,6 +425,12 @@ typedef struct _KerningHashElement
 
 @synthesize opacity=opacity_, color=color_;
 
+#pragma mark BitmapFontAtlas - Purge Cache
++(void) purgeCachedData
+{
+	FNTConfigRemoveCache();
+}
+
 #pragma mark BitmapFontAtlas - Creation & Init
 +(id) bitmapFontAtlasWithString:(NSString*)string fntFile:(NSString*)fntFile
 {
@@ -392,10 +439,11 @@ typedef struct _KerningHashElement
 
 
 -(id) initWithString:(NSString*)theString fntFile:(NSString*)fntFile
-{
-	NSString *textureAtlasName = [self atlasNameFromFntFile:fntFile];
+{	
+	configuration_ = FNTConfigLoadFile(fntFile);
+	[configuration_ retain];
 	
-	if ((self=[super initWithFile:textureAtlasName capacity:[theString length]])) {
+	if ((self=[super initWithFile:configuration_->atlasName capacity:[theString length]])) {
 
 		opacity_ = 255;
 		color_ = ccWHITE;
@@ -406,8 +454,6 @@ typedef struct _KerningHashElement
 
 		anchorPoint_ = ccp(0.5f, 0.5f);
 
-		configuration = FNTConfigLoadFile(fntFile);
-		[configuration retain];
 		[self setString:theString];
 	}
 
@@ -417,56 +463,8 @@ typedef struct _KerningHashElement
 -(void) dealloc
 {
 	[string_ release];
-	[configuration release];
+	[configuration_ release];
 	[super dealloc];
-}
-
-//
-// obtain the texture atlas image
-//
--(NSString*) atlasNameFromFntFile:(NSString*)fntFile
-{
-	NSString *fullpath = [CCFileUtils fullPathFromRelativePath:fntFile];
-	NSString *contents = [NSString stringWithContentsOfFile:fullpath encoding:NSUTF8StringEncoding error:nil];
-
-	NSArray *lines = [[NSArray alloc] initWithArray:[contents componentsSeparatedByString:@"\n"]];
-	NSEnumerator *nse = [lines objectEnumerator];
-	NSString *line;
-	NSString *propertyValue = nil; // ret value
-	
-	// Loop through all the lines in the lines array processing each one
-	while( (line = [nse nextObject]) ) {
-		// Check to see if the start of the line is something we are interested in
-		if([line hasPrefix:@"page id="]) {
-			
-			// Break the values for this line up using =
-			NSArray *values = [line componentsSeparatedByString:@"="];
-			
-			// Get the enumerator for the array of components which has been created
-			NSEnumerator *nse = [values objectEnumerator];
-			
-			// We need to move past the first entry in the array before we start assigning values
-			[nse nextObject];
-			
-			// page ID. Sanity check
-			propertyValue = [nse nextObject];
-			NSAssert( [propertyValue intValue] == 0, @"XXX: BitmapFontAtlas only supports 1 page");
-			
-			// file 
-			propertyValue = [nse nextObject];
-			NSArray *array = [propertyValue componentsSeparatedByString:@"\""];
-			propertyValue = [array objectAtIndex:1];
-			break;
-		}
-	}
-	// Finished with lines so release it
-	[lines release];	
-	
-	NSAssert(propertyValue,@"BitmapFontAtlas file could not be found");
-
-	NSString *textureAtlasName = [CCFileUtils fullPathFromRelativePath:propertyValue];
-	NSString *relDirPathOfTextureAtlas = [fntFile stringByDeletingLastPathComponent];
-	return [relDirPathOfTextureAtlas stringByAppendingPathComponent:textureAtlasName];
 }
 
 #pragma mark BitmapFontAtlas - Atlas generation
@@ -476,9 +474,9 @@ typedef struct _KerningHashElement
 	int ret = 0;
 	unsigned int key = (first<<16) | (second & 0xffff);
 	
-	if( configuration->kerningDictionary ) {
+	if( configuration_->kerningDictionary ) {
 		tKerningHashElement *element = NULL;
-		HASH_FIND_INT(configuration->kerningDictionary, &key, element);		
+		HASH_FIND_INT(configuration_->kerningDictionary, &key, element);		
 		if(element)
 			ret = element->amount;
 	}
@@ -497,11 +495,11 @@ typedef struct _KerningHashElement
 	NSUInteger l = [string_ length];
 	for(NSUInteger i=0; i<l; i++) {
 		unichar c = [string_ characterAtIndex:i];
-		NSAssert( c < kBitmapFontAtlasMaxChars, @"BitmapFontAtlas: character outside bounds");
+		NSAssert( c < kCCBitmapFontAtlasMaxChars, @"BitmapFontAtlas: character outside bounds");
 		
 		kerningAmount = [self kerningAmountForFirst:prev second:c];
 		
-		ccBitmapFontDef fontDef = configuration->bitmapFontArray[c];
+		ccBitmapFontDef fontDef = configuration_->bitmapFontArray[c];
 		
 		CGRect rect = fontDef.rect;
 		
@@ -523,17 +521,17 @@ typedef struct _KerningHashElement
 		}
 
 		fontChar.position = ccp( nextFontPositionX + fontDef.xOffset + fontDef.rect.size.width / 2.0f ,
-								(configuration->commonHeight - fontDef.yOffset) - rect.size.height/2.0f );		
+								(configuration_->commonHeight - fontDef.yOffset) - rect.size.height/2.0f );		
 		
 //		NSLog(@"position.y: %f", fontChar.position.y);
 		
 		// update kerning
 		fontChar.position = ccpAdd( fontChar.position, ccp(kerningAmount,0));
-		nextFontPositionX += configuration->bitmapFontArray[c].xAdvance + kerningAmount;
+		nextFontPositionX += configuration_->bitmapFontArray[c].xAdvance + kerningAmount;
 		prev = c;
 		
-		tmpSize.width += configuration->bitmapFontArray[c].xAdvance + kerningAmount;
-		tmpSize.height = configuration->commonHeight;
+		tmpSize.width += configuration_->bitmapFontArray[c].xAdvance + kerningAmount;
+		tmpSize.height = configuration_->commonHeight;
 		
 		// Apply label properties
 		[fontChar setOpacityModifyRGB:opacityModifyRGB_];
